--- a/FUNCIONÁRIO(ADM)/addLivroNovo/styles.css
+++ b/FUNCIONÁRIO(ADM)/addLivroNovo/styles.css
@@ -97,6 +97,12 @@ body {
     color: red;
 }
 
+main {
+    flex: 1;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -108,76 +114,24 @@ body {
     box-sizing: border-box;
 }
 
-.lineSquare {
-    width: 410px;
-    box-sizing: border-box;
-    height: auto;
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.info-book-reserva {
-    display: flex;
-}
-
-.img-reserva {
-    height: auto;
-    width: 50px;
-    border-radius: 5px;
-    margin: 15px;
-}
-
-.livro-info {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 12px;
-    margin-top: 5px;
-}
-
-.line {
-    width: 100%;
-    box-sizing: border-box;
-    height: auto;
-    border-bottom: 1px solid #ccc;
-    margin-bottom: 10px;
-}
-
-.form-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 50%;
-}
-
-.info {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 13px;
-    margin-left: 8px;
-}
-
 .p-usuario {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 13px;
+    font-size: 14px;
     text-align: center;
+    margin: 2px;
 }
 
 .opcao {
-    justify-content:space-evenly;
+    justify-content: center;
     align-items: center;
     display: flex;
-
+    width: 100%;
 }
 
 .select-input {
-    width: 58%;
+    width: 600px;
     height: 40px;
     padding: 10px;
     border: 1px solid #ccc;
@@ -187,7 +141,7 @@ body {
     background-color: #fff;
     font-family: "Poppins", sans-serif;
     margin: 14px;
-    font-size: 12px;
+    font-size: 13px;
 }
 
 /* Opcional: Estilo para hover e focus */
@@ -197,35 +151,7 @@ body {
     outline: none;
 }
 
-main {
-    flex: 1;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.conteudo {
-    text-align: center;
-}
-
-.parent-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.p-i-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    max-width: 800px;
-    box-sizing: border-box;
-}
-
-.informacoes {
+.add-livro-existente {
     font-size: 30px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
@@ -235,26 +161,45 @@ main {
     text-align: center;
 }
 
-.input-container {
-    width: 100%;
+.horario {
+    color: #CCC;
+    margin-top: 3px;
+    margin-bottom: 5px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 12px;
 }
 
-input[type="file"] {
-    display: none;
+.notify {
+    display: flex;
+    flex-direction: row;
+    margin: 3px;
 }
 
-.text-input {
+.aviso {
+    height: auto;
+    width: 50px;
+    margin-right: 5px;
+}
+
+.mensagem {
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
     font-size: 14px;
-    width: 100%;
-    margin: 0 auto;
 }
 
-.confirm-button {
-    height: 50px;
-    width: 120px;
+.editar {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.add-button {
+    height: 45px;
+    padding: 10px 30px;
+    margin: 20px 0;
     background-color: #FF735C;
     color: white;
     border: none;
@@ -263,36 +208,11 @@ input[type="file"] {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 12px;
+    font-size: 16px;
 }
 
-.confirm-button:hover,
-.cancel-button:hover {
+.add-button:hover {
     opacity: 0.5;
-}
-
-.cancel-button {
-    height: 50px;
-    width: 120px;
-    background-color: #FFF;
-    color: black;
-    border: 1px solid black;
-    border-radius: 30px;
-    cursor: pointer;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 12px;
-}
-
-.obs {
-    font-size: 12px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    color: #8a8a8a;
-    margin-top: 20px;
-    margin-bottom: 5px;
 }
 
 footer {
