--- a/FUNCIONÁRIO(ADM)/biblioteca/styles.css
+++ b/FUNCIONÁRIO(ADM)/biblioteca/styles.css
@@ -327,3 +327,86 @@ footer a {
 footer a:hover {
     color: #3F7263;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal:target {
+    display: block;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 300px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-button {
+    background-color: #FF735C;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 10px 0;
+    border-radius: 30px;
+    cursor: pointer;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    display: block;
+    width: 100%;
+}
+
+.modal-button:hover {
+    opacity: 0.5;
+}
+
+.modal-content a {
+    text-decoration: none;
+}
+
+@media screen and (max-width: 1024px) {
+    .book-list {
+        max-width: 80%; /* Ajuste a largura máxima do contêiner de livros */
+    }
+    
+    .book-title {
+        font-size: 12px;
+    }
+    
+    .book-author {
+        font-size: 10px;
+    }
+    
+    .book-course {
+        font-size: 10px;
+    }
+}
