--- a/FUNCIONÁRIO(ADM)/emprestimos/styles.css
+++ b/FUNCIONÁRIO(ADM)/emprestimos/styles.css
@@ -197,6 +197,12 @@ body {
     outline: none;
 }
 
+main {
+    flex: 1;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 .conteudo {
     text-align: center;
 }
@@ -287,4 +293,28 @@ input[type="file"] {
     color: #8a8a8a;
     margin-top: 20px;
     margin-bottom: 5px;
+}
+
+footer {
+    display: block;
+	bottom: 0;
+	background: #fff;
+	width: 100%;
+	color:#000;
+	text-align: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
+    font-size: 14px;
+}
+footer a {
+    color: #FF735C;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #3F7263;
 }
