--- a/FUNCIONÁRIO(ADM)/selecao/styles.css
+++ b/FUNCIONÁRIO(ADM)/selecao/styles.css
@@ -97,6 +97,12 @@ body {
     color: red;
 }
 
+main {
+    flex: 1;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -265,4 +271,28 @@ a {
 
 .confirm-button:hover {
     opacity: 0.5;
+}
+
+footer {
+    display: block;
+	bottom: 0;
+	background: #fff;
+	width: 100%;
+	color:#000;
+	text-align: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
+    font-size: 14px;
+}
+footer a {
+    color: #FF735C;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #3F7263;
 }
