--- a/FUNCIONÁRIO(ADM)/recomendacao/styles.css
+++ b/FUNCIONÁRIO(ADM)/recomendacao/styles.css
@@ -216,7 +216,7 @@ main {
     flex-wrap: wrap; /* Permite que os itens se movam para a próxima linha se não houver espaço suficiente */
     gap: 10px; /* Espaçamento entre os livros */
     justify-content: center;
-    /* max-width: 70%; */
+    max-width: 98%;
     margin: 0 auto;
     margin-bottom: 30px;
     cursor: pointer;
