--- a/FUNCIONÁRIO(ADM)/telaInicial/styles.css
+++ b/FUNCIONÁRIO(ADM)/telaInicial/styles.css
@@ -91,6 +91,18 @@ body, html {
     color: red;
 }
 
+.header {
+    justify-content: center;
+    align-items: center;
+}
+
+
+main {
+    flex: 1;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 .search-container {
     display: flex;
     align-items: center;
