--- a/FUNCIONÁRIO(ADM)/addLivroNovo/styles.css
+++ b/FUNCIONÁRIO(ADM)/addLivroNovo/styles.css
@@ -5,12 +5,6 @@ html, body {
     box-sizing: border-box;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-}
-
 .header {
     justify-content: center;
     align-items: center;
@@ -101,6 +95,7 @@ main {
     flex: 1;
     padding: 20px;
     box-sizing: border-box;
+    width: 100%;
 }
 
 .container {
@@ -112,21 +107,37 @@ main {
 }
 
 .input-total {
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100%;
 }
 
-.input-container {
-    width: 50%;
+.input-img-container {
     justify-content: center;
+    box-sizing: border-box;
+    margin-right: 150px;
 }
 
-.input-img-container {
-    width: 50%;
-    justify-content: center;
-    
+.input-container {
+    width: 40%;
+}
+
+.text {
+    margin-top: 25px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 14px;
+}
+
+.text-capa {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 14px;
+    margin-top: 0px;
 }
 
 input[type="file"] {
@@ -142,7 +153,6 @@ input[type="file"] {
     border: 1px solid #3F7263;
     border-radius: 30px;
     cursor: pointer;
-    
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -170,7 +180,6 @@ input[type="file"] {
 }
 
 .input-field {
-    width: 40%;
     height: 45px;
     padding: 20px;
     margin: 10px 0;
@@ -180,7 +189,7 @@ input[type="file"] {
 }
 
 .input-resumo {
-    width: 40%;
+    width: 100%;
     height: 200px;
     padding: 20px;
     margin: 10px 0;
@@ -190,13 +199,17 @@ input[type="file"] {
 }
 
 .input-quant {
-    width: 20%;
+    width: 40%;
     height: 45px;
     padding: 20px;
     margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 30px;
     box-sizing: border-box; 
+}
+
+.input-wrapper {
+    margin-bottom: 10px;
 }
 
 input[type=number]::-webkit-outer-spin-button,
