--- a/FUNCIONÁRIO(ADM)/sobreNos/styles.css
+++ b/FUNCIONÁRIO(ADM)/sobreNos/styles.css
@@ -6,7 +6,6 @@ body, html {
 }
 
 .background {
-    display: flex;
     width: 100%;
     height: 100%;
     background-image: url('/imagens_telas/sobreNos.jpg');
@@ -14,4 +13,43 @@ body, html {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    display: flex;
+}
+
+.conteudo {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    margin-top: ;
+}
+
+.header {
+    justify-content: center;
+    text-align: center;
+    font-size: 1rem;
+    max-width: 40%;
+    justify-content: center;
+}
+
+.membros-container {
+    max-width: 60%;
+    display: flex;
+    flex-direction: row;
+    
+}
+
+.membros {
+    text-align: justify;
+    margin: 15px;
+    font-size: 16px;
+}
+
+.nome {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 18px;
 }
