--- a/FUNCIONÁRIO(ADM)/sobreNos/styles.css
+++ b/FUNCIONÁRIO(ADM)/sobreNos/styles.css
@@ -8,12 +8,21 @@ body, html {
 .background {
     width: 100%;
     height: 100%;
-    background-image: url('/imagens_telas/sobreNos.jpg');
+    background-image: url('/imagens_telas/back.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
+}
+
+.box {
+    height: 400px; 
+    background-color: #FFF; 
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .conteudo {
@@ -23,13 +32,13 @@ body, html {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    margin-top: ;
+    justify-content: center;
 }
 
 .header {
     justify-content: center;
     text-align: center;
-    font-size: 1rem;
+    font-size: 0.875rem;
     max-width: 40%;
     justify-content: center;
 }
@@ -44,12 +53,12 @@ body, html {
 .membros {
     text-align: justify;
     margin: 15px;
-    font-size: 16px;
+    font-size: 0.875rem;
 }
 
 .nome {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 18px;
+    font-size: 1rem;
 }
