--- a/FUNCIONÁRIO(ADM)/addLivroExistente/styles.css
+++ b/FUNCIONÁRIO(ADM)/addLivroExistente/styles.css
@@ -18,7 +18,7 @@ body {
 
 .retangGreen {
     width: 100%;
-    height: 65px;
+    height: 4.063rem;
     background-color: #3F7263;
     display: flex;
     justify-content: center;
@@ -27,22 +27,22 @@ body {
 }
 
 .imgLogo {
-    height: 55px;
-    width: 70px;
+    height: 3.438rem;
+    width: 4.375rem;
 }
 
 .imgEtec {
-    height: 35px;
-    width: 85px;
+    height: 2.188rem;
+    width: 5.313rem;
     position: absolute;
     right: 0;
-    bottom: 12px;
-    margin-right: 30px;
+    bottom: 0.75rem;
+    margin-right: 1.875rem;
 }
 
 .retangOrange {
     width: 100%;
-    height: 14px; 
+    height: 0.875rem; 
     background-color: #FF735C;
 }
 
@@ -76,7 +76,7 @@ body {
     justify-content: center;
     color: black;
     text-align: center;
-    padding: 12px 14px;
+    padding: 0.75rem 0.875rem;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
@@ -84,8 +84,8 @@ body {
 }
 
 .navbar ul li a i {
-    font-size: 22px;
-    margin-right: 8px;
+    font-size: 1.375rem;
+    margin-right: 0.5rem;
 }
 
 .navbar ul li a.active {
@@ -99,8 +99,18 @@ body {
 
 main {
     flex: 1;
-    padding: 20px;
+    padding: 1.25rem;
     box-sizing: border-box;
+}
+
+.add-livro-existente {
+    font-size: 1.875rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 1.563rem;
+    margin-bottom: 0.938rem;
+    text-align: center;
 }
 
 .container {
@@ -109,8 +119,8 @@ main {
     justify-content: center;
     max-width: 95%;
     margin: 0 auto;
-    gap: 10px;
-    padding: 20px;
+    gap: 0.625rem;
+    padding: 1.25rem;
     box-sizing: border-box;
 }
 
@@ -118,9 +128,9 @@ main {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 14px;
+    font-size: 0.875rem;
     text-align: center;
-    margin: 2px;
+    margin: 0.125rem;
 }
 
 .opcao {
@@ -131,17 +141,17 @@ main {
 }
 
 .select-input {
-    width: 600px;
-    height: 40px;
-    padding: 10px;
+    width: 37.5rem;
+    height: 2.5rem;
+    padding: 0.625rem;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
+    border-radius: 0.313rem;
+    font-size: 1rem;
     box-sizing: border-box;
     background-color: #fff;
     font-family: "Poppins", sans-serif;
-    margin: 14px;
-    font-size: 13px;
+    margin: 0.875rem;
+    font-size: 0.813rem;
 }
 
 /* Opcional: Estilo para hover e focus */
@@ -151,45 +161,6 @@ main {
     outline: none;
 }
 
-.add-livro-existente {
-    font-size: 30px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    text-align: center;
-}
-
-.horario {
-    color: #CCC;
-    margin-top: 3px;
-    margin-bottom: 5px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 12px;
-}
-
-.notify {
-    display: flex;
-    flex-direction: row;
-    margin: 3px;
-}
-
-.aviso {
-    height: auto;
-    width: 50px;
-    margin-right: 5px;
-}
-
-.mensagem {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 14px;
-}
-
 .editar {
     display: flex;
     justify-content: center;
@@ -197,18 +168,18 @@ main {
 }
 
 .add-button {
-    height: 45px;
-    padding: 10px 30px;
-    margin: 20px 0;
+    height: 2.813rem;
+    padding: 0.625rem 1.875rem;
+    margin: 1.25rem 0;
     background-color: #FF735C;
     color: white;
     border: none;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     cursor: pointer;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .add-button:hover {
@@ -222,13 +193,13 @@ footer {
 	width: 100%;
 	color:#000;
 	text-align: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 	font-family: "Poppins", sans-serif;
 	font-weight: 400;
 	font-style: normal;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 footer a {
     color: #FF735C;
