--- a/FUNCIONÁRIO(ADM)/sobreNos/styles.css
+++ b/FUNCIONÁRIO(ADM)/sobreNos/styles.css
@@ -17,26 +17,18 @@ body, html {
 }
 
 .card {
-    background-color:  rgba(255, 255, 255, 0.767);
+    background-color:  rgba(0, 0, 0, 0.863);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    height: 450px;
+    height: auto;
     max-width: 60%;
     width: 100%;
     align-items: center;
     justify-content: center;
     text-align: center;
+    color: white;
 }
-
-/* .box {
-    height: 450px; 
-    background-color: #FFF; 
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-} */
 
 .conteudo {
     align-items: center;
@@ -51,28 +43,36 @@ body, html {
 .header {
     justify-content: center;
     text-align: center;
-    font-size: 0.875rem;
-    max-width: 40%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    font-size: 18px;
+    margin-top: 20px;
+}
+
+.header p {
+    width: 100%;
+    max-width: 70%;
+    margin: 0 auto;
+    text-align: center;
 }
 
 .membros-container {
     display: flex;
     flex-direction: row;
     margin: 20px;
-    
+    margin-bottom: 30px;
 }
 
 .membros {
     text-align: justify;
-    padding: 15px;
-    font-size: 0.875rem;
+    margin: 20px;
+    font-size: 18px;
 }
 
 .nome {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 1rem;
+    font-size: 18px;
 }
