--- a/FUNCIONÁRIO(ADM)/addLivroNovo/styles.css
+++ b/FUNCIONÁRIO(ADM)/addLivroNovo/styles.css
@@ -12,7 +12,7 @@ html, body {
 
 .retangGreen {
     width: 100%;
-    height: 65px;
+    height: 4.063rem;
     background-color: #3F7263;
     display: flex;
     justify-content: center;
@@ -21,22 +21,22 @@ html, body {
 }
 
 .imgLogo {
-    height: 55px;
-    width: 70px;
+    height: 3.438rem;
+    width: 4.375rem;
 }
 
 .imgEtec {
-    height: 35px;
-    width: 85px;
+    height: 2.188rem;
+    width: 5.313rem;
     position: absolute;
     right: 0;
-    bottom: 12px;
-    margin-right: 30px;
+    bottom: 0.75rem;
+    margin-right: 1.875rem;
 }
 
 .retangOrange {
     width: 100%;
-    height: 14px; 
+    height: 0.875rem; 
     background-color: #FF735C;
 }
 
@@ -70,7 +70,7 @@ html, body {
     justify-content: center;
     color: black;
     text-align: center;
-    padding: 12px 14px;
+    padding: 0.75rem 0.875rem;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
@@ -78,8 +78,8 @@ html, body {
 }
 
 .navbar ul li a i {
-    font-size: 22px;
-    margin-right: 8px;
+    font-size: 1.375rem;
+    margin-right: 0.5rem;
 }
 
 .navbar ul li a.active {
@@ -93,18 +93,18 @@ html, body {
 
 main {
     flex: 1;
-    padding: 20px;
+    padding: 1.25rem;
     box-sizing: border-box;
     width: 100%;
 }
 
 .add-livro-novo {
-    font-size: 30px;
+    font-size: 1.875rem;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-style: normal;
-    margin-top: 25px;
-    margin-bottom: 15px;
+    margin-top: 1.563rem;
+    margin-bottom: 0.938rem;
     text-align: center;
 }
 
@@ -112,7 +112,7 @@ main {
     justify-content: center;
     width: 100%;
     margin: 0 auto;
-    padding: 20px;
+    padding: 1.25rem;
     box-sizing: border-box;
 }
 
@@ -127,25 +127,25 @@ main {
 .input-img-container {
     justify-content: center;
     box-sizing: border-box;
-    margin-right: 150px;
+    margin-right: 9.375rem;
 }
 
 .text-capa {
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 14px;
-    margin-top: 0px;
+    font-size: 0.875rem;
+    margin-top: 0;
 }
 
 .upload-button {
-    margin-top: 10px;
-    padding: 8px 14px;
-    font-size: 14px;
+    margin-top: 0.625rem;
+    padding: 0.5rem 0.875rem;
+    font-size: 0.875rem;
     background-color: #3F7263;
     color: white;
     border: 1px solid #3F7263;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     cursor: pointer;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
@@ -162,31 +162,31 @@ input[type="file"] {
 }
 
 .input-wrapper {
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
 }
 
 .input-group {
     flex-direction: column;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
     display: flex;
     justify-content: center;
 }
 
 .text {
-    margin-top: 25px;
+    margin-top: 1.563rem;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 .input-quant {
     width: 40%;
-    height: 45px;
-    padding: 20px;
-    margin: 10px 0;
+    height: 2.813rem;
+    padding: 1.25rem;
+    margin: 0.625rem 0;
     border: 1px solid #ccc;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     box-sizing: border-box; 
 }
 
@@ -204,27 +204,27 @@ input[type=number]::-webkit-inner-spin-button {
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 14px;
+    font-size: 0.875rem;
     width: 100%;
     margin: 0 auto;
 }
 
 .input-field {
-    height: 45px;
-    padding: 20px;
-    margin: 10px 0;
+    height: 2.813rem;
+    padding: 1.25rem;
+    margin: 0.625rem 0;
     border: 1px solid #ccc;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     box-sizing: border-box; 
 }
 
 .input-resumo {
     width: 100%;
-    height: 200px;
-    padding: 20px;
-    margin: 10px 0;
+    height: 12.5rem;
+    padding: 1.25rem;
+    margin: 0.625rem 0;
     border: 1px solid #ccc;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     box-sizing: border-box; 
 }
 
@@ -235,18 +235,18 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .add-button {
-    height: 45px;
-    padding: 10px 30px;
-    margin: 20px 0;
+    height: 2.813rem;
+    padding: 0.625rem 1.875rem;
+    margin: 1.25rem 0;
     background-color: #FF735C;
     color: white;
     border: none;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     cursor: pointer;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .add-button:hover {
@@ -260,13 +260,13 @@ footer {
 	width: 100%;
 	color:#000;
 	text-align: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 	font-family: "Poppins", sans-serif;
 	font-weight: 400;
 	font-style: normal;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 footer a {
     color: #FF735C;
