--- a/FUNCIONÁRIO(ADM)/emprestimos/styles.css
+++ b/FUNCIONÁRIO(ADM)/emprestimos/styles.css
@@ -18,7 +18,7 @@ body {
 
 .retangGreen {
     width: 100%;
-    height: 65px;
+    height: 4.063rem;
     background-color: #3F7263;
     display: flex;
     justify-content: center;
@@ -27,22 +27,22 @@ body {
 }
 
 .imgLogo {
-    height: 55px;
-    width: 70px;
+    height: 3.438rem;
+    width: 4.375rem;
 }
 
 .imgEtec {
-    height: 35px;
-    width: 85px;
+    height: 2.188rem;
+    width: 5.313rem;
     position: absolute;
     right: 0;
-    bottom: 12px;
-    margin-right: 30px;
+    bottom: 0.75rem;
+    margin-right: 1.875rem;
 }
 
 .retangOrange {
     width: 100%;
-    height: 14px; 
+    height: 0.875rem; 
     background-color: #FF735C;
 }
 
@@ -76,7 +76,7 @@ body {
     justify-content: center;
     color: black;
     text-align: center;
-    padding: 12px 14px;
+    padding: 0.75rem 0.875rem;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
@@ -84,8 +84,8 @@ body {
 }
 
 .navbar ul li a i {
-    font-size: 22px;
-    margin-right: 8px;
+    font-size: 1.375rem;
+    margin-right: 0.5rem;
 }
 
 .navbar ul li a.active {
@@ -97,51 +97,71 @@ body {
     color: red;
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 95%;
-    margin: 0 auto;
-    gap: 10px;
-    padding: 20px;
+main {
+    flex: 1;
+    padding: 1.25rem;
     box-sizing: border-box;
+}
+
+.emprestimo {
+    font-size: 1.875rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 1.563rem;
+    margin-bottom: 0.938rem;
+    text-align: center;
 }
 
 .search-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 14px 16px;
+    padding: 0.875rem 1rem;
 }
 
 .search-container input {
-    padding-left: 20px;
-    padding-top: 7px;
-    padding-bottom: 7px;
-    font-size: 17px;
+    padding-left: 1.25rem;
+    padding-top: 0.438rem;
+    padding-bottom: 0.438rem;
+    font-size: 1.063rem;
     border: 1px solid #ccc;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     outline: none;
     font-family: "Poppins", sans-serif;
     width: 42%;
-    margin-left: 10px;
+    margin-left: 0.625rem;
 }
 
 .search-container button {
     background: none;
     border: none;
     cursor: pointer;
-    margin-left: 8px;
+    margin-left: 0.5rem;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 95%;
+    margin: 0 auto;
+    gap: 0.625rem;
+    padding: 1.25rem;
+    box-sizing: border-box;
 }
 
 .lineSquare {
-    width: 410px;
+    width: 25.625rem;
     box-sizing: border-box;
     height: auto;
     border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 0.625rem;
+    padding: 0.625rem;
+}
+
+.input-container {
+    width: 100%;
 }
 
 .info-book-reserva {
@@ -150,17 +170,17 @@ body {
 
 .img-reserva {
     height: auto;
-    width: 50px;
-    border-radius: 5px;
-    margin: 15px;
+    width: 3.125rem;
+    border-radius: 0.313rem;
+    margin: 0.938rem;
 }
 
 .livro-info {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 12px;
-    margin-top: 5px;
+    font-size: 0.75rem;
+    margin-top: 0.313rem;
 }
 
 .line {
@@ -168,158 +188,15 @@ body {
     box-sizing: border-box;
     height: auto;
     border-bottom: 1px solid #ccc;
-    margin-bottom: 10px;
-}
-
-.form-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 50%;
+    margin-bottom: 0.625rem;
 }
 
 .info {
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-style: normal;
-    font-size: 13px;
-    margin-left: 8px;
-}
-
-.p-usuario {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 13px;
-    text-align: center;
-}
-
-.opcao {
-    justify-content:space-evenly;
-    align-items: center;
-    display: flex;
-
-}
-
-.select-input {
-    width: 58%;
-    height: 40px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    box-sizing: border-box;
-    background-color: #fff;
-    font-family: "Poppins", sans-serif;
-    margin: 14px;
-    font-size: 12px;
-}
-
-/* Opcional: Estilo para hover e focus */
-.select-input:hover,
-.select-input:focus {
-    border-color: #FF735C;
-    outline: none;
-}
-
-main {
-    flex: 1;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.conteudo {
-    text-align: center;
-}
-
-.parent-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.p-i-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    max-width: 800px;
-    box-sizing: border-box;
-}
-
-.emprestimo {
-    font-size: 30px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    text-align: center;
-}
-
-.input-container {
-    width: 100%;
-}
-
-input[type="file"] {
-    display: none;
-}
-
-.text-input {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 14px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-.confirm-button {
-    height: 50px;
-    width: 120px;
-    background-color: #FF735C;
-    color: white;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 12px;
-}
-
-.confirm-button:hover,
-.cancel-button:hover {
-    opacity: 0.5;
-}
-
-.cancel-button {
-    height: 50px;
-    width: 120px;
-    background-color: #FFF;
-    color: black;
-    border: 1px solid black;
-    border-radius: 30px;
-    cursor: pointer;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 12px;
-}
-
-.obs {
-    font-size: 12px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    color: #8a8a8a;
-    margin-top: 20px;
-    margin-bottom: 5px;
+    font-size: 0.813rem;
+    margin-left: 0.5rem;
 }
 
 footer {
@@ -329,13 +206,13 @@ footer {
 	width: 100%;
 	color:#000;
 	text-align: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 	font-family: "Poppins", sans-serif;
 	font-weight: 400;
 	font-style: normal;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 footer a {
     color: #FF735C;
