--- a/FUNCIONÁRIO(ADM)/esqueceuSenha2/styles.css
+++ b/FUNCIONÁRIO(ADM)/esqueceuSenha2/styles.css
@@ -30,28 +30,28 @@ body, html {
 }
 
 .imgEsqSenha {
-    width: 350px;
-    height: 350px;
-}
-
-.redefinirSenha {
-    font-size: 30px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    margin-top: 10;
-    margin-bottom: 15px;
-}
-
-.texto {
-    font-size: 14px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
+    width: 21.875rem;
+    height: 21.875rem;
 }
 
 .conteudo {
     text-align: center;
+}
+
+.redefinirSenha {
+    font-size: 1.875rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 0.625rem;
+    margin-bottom: 0.938rem;
+}
+
+.texto {
+    font-size: 0.875rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
 
 .container-input {
@@ -63,18 +63,18 @@ body, html {
 
 .input-field {
     width: 35%;
-    height: 45px;
+    height: 2.813rem;
     padding: 20px;
-    margin: 10px 0;
+    margin: 1.25rem 0;
     border: 1px solid #ccc;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     flex-direction: column;
     box-sizing: border-box; /* Garante que o padding não ultrapasse a largura do container */
 }
 
 .input-field::placeholder {
     color: #999;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -94,18 +94,18 @@ a {
 
 .redefinir-button {
     width: 24%;
-    height: 45px;
-    padding: 10px;
-    margin: 20px 0;
+    height: 2.813rem;
+    padding: 0.625rem;
+    margin: 1.25rem 0;
     background-color: #FF735C;
     color: white;
     border: none;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     cursor: pointer;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .redefinir-button:hover {
