--- a/FUNCIONÁRIO(ADM)/infoLivroBiblioteca/styles.css
+++ b/FUNCIONÁRIO(ADM)/infoLivroBiblioteca/styles.css
@@ -18,7 +18,7 @@ body {
 
 .retangGreen {
     width: 100%;
-    height: 65px;
+    height: 4.063rem;
     background-color: #3F7263;
     display: flex;
     justify-content: center;
@@ -27,17 +27,17 @@ body {
 }
 
 .imgLogo {
-    height: 55px;
-    width: 70px;
+    height: 3.438rem;
+    width: 4.375rem;
 }
 
 .imgEtec {
-    height: 35px;
-    width: 85px;
+    height: 2.188rem;
+    width: 5.313rem;
     position: absolute;
     right: 0;
-    bottom: 12px;
-    margin-right: 30px;
+    bottom: 0.75rem;
+    margin-right: 1.875rem;
 }
 
 .retangOrange {
@@ -97,15 +97,20 @@ body {
     color: red;
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 95%;
-    margin: 0 auto;
-    gap: 10px;
+main {
+    flex: 1;
     padding: 20px;
     box-sizing: border-box;
+}
+
+.informacoes {
+    font-size: 30px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    text-align: center;
 }
 
 .remov-button {
@@ -127,8 +132,15 @@ body {
     text-align: center;
 }
 
-.add-button:hover {
-    opacity: 0.5;
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 95%;
+    margin: 0 auto;
+    gap: 10px;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .lineSquare {
@@ -151,6 +163,14 @@ body {
     margin: 15px;
 }
 
+.livro-info {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12px;
+    margin-top: 5px;
+}
+
 .header-lineSquare {
     display: flex;
     flex-direction: row;
@@ -163,14 +183,6 @@ body {
     font-style: normal;
     font-size: 16px;
     margin-bottom: 0px;
-}
-
-.livro-info {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 12px;
-    margin-top: 5px;
 }
 
 .livro {
@@ -199,53 +211,10 @@ body {
     margin-bottom: 0px;
 }
 
-.line {
-    width: 100%;
-    box-sizing: border-box;
-    height: auto;
-    border-bottom: 1px solid #ccc;
-    margin: 10px;
-}
-
-.form-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 50%;
-}
-
-.info {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 13px;
-    margin-left: 8px;
-}
-
 .resumo {
     margin-top: 3px;
     font-size: 14px;
     font-size: 13.5px;
-}
-
-.desc-prof {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 13px;
-    margin-left: 15px;
-    margin-bottom: 0px;
-}
-
-.desc-prof-curso {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 13px;
-    margin-left: 15px;
-    margin-top: 5px;
 }
 
 .info-container {
@@ -264,77 +233,6 @@ body {
 .img-icons {
     height: auto;
     width: 30px;
-}
-
-main {
-    flex: 1;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-.conteudo {
-    text-align: center;
-}
-
-.informacoes {
-    font-size: 30px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    text-align: center;
-}
-
-.text-input {
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 14px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-.modulo-form {
-    display: flex;
-    gap: 34px;
-    margin-left: 12px;
-    margin-top: 6px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 13px;
-}
-
-input[type="radio"] {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    width: 16px;
-    height: 16px;
-    border: 1px solid #ccc;
-    border-radius: 50%;
-    background: #fff;
-    cursor: pointer;
-    position: relative;
-}
-
-input[type="radio"]:checked {
-    border: 1px solid #3F7263;
-    background-color: #3F7263;
-}
-
-input[type="radio"]:checked::before {
-    content: '';
-    display: block;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background-color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .editar {
@@ -386,12 +284,8 @@ footer a:hover {
     color: #3F7263;
 }
 
-.text-modal {
-    font-family: "Poppins", sans-serif;
-	font-weight: 600;
-	font-style: normal;
-    font-size: 18px;
-    margin-top: 30px;
+.modal:target {
+    display: block;
 }
 
 .modal {
@@ -404,10 +298,6 @@ footer a:hover {
     height: 100%;
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
-}
-
-.modal:target {
-    display: block;
 }
 
 .modal-content {
@@ -433,6 +323,14 @@ footer a:hover {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.text-modal {
+    font-family: "Poppins", sans-serif;
+	font-weight: 600;
+	font-style: normal;
+    font-size: 18px;
+    margin-top: 30px;
 }
 
 .buttons {
