--- a/FUNCIONÁRIO(ADM)/infoContatoEditar/styles.css
+++ b/FUNCIONÁRIO(ADM)/infoContatoEditar/styles.css
@@ -18,7 +18,7 @@ body {
 
 .retangGreen {
     width: 100%;
-    height: 65px;
+    height: 4.063rem;
     background-color: #3F7263;
     display: flex;
     justify-content: center;
@@ -27,22 +27,22 @@ body {
 }
 
 .imgLogo {
-    height: 55px;
-    width: 70px;
+    height: 3.438rem;
+    width: 4.375rem;
 }
 
 .imgEtec {
-    height: 35px;
-    width: 85px;
+    height: 2.188rem;
+    width: 5.313rem;
     position: absolute;
     right: 0;
-    bottom: 12px;
-    margin-right: 30px;
+    bottom: 0.75rem;
+    margin-right: 1.875rem;
 }
 
 .retangOrange {
     width: 100%;
-    height: 14px; 
+    height: 0.875rem; 
     background-color: #FF735C;
 }
 
@@ -76,7 +76,7 @@ body {
     justify-content: center;
     color: black;
     text-align: center;
-    padding: 12px 14px;
+    padding: 0.75rem 0.875rem;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
@@ -84,8 +84,8 @@ body {
 }
 
 .navbar ul li a i {
-    font-size: 22px;
-    margin-right: 8px;
+    font-size: 1.375rem;
+    margin-right: 0.5rem;
 }
 
 .navbar ul li a.active {
@@ -99,8 +99,18 @@ body {
 
 main {
     flex: 1;
-    padding: 20px;
+    padding: 1.25rem;
     box-sizing: border-box;
+}
+
+.contato {
+    font-size: 1.875rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 1.563rem;
+    margin-bottom: 0.938rem;
+    text-align: center;
 }
 
 .container {
@@ -110,18 +120,8 @@ main {
     align-items: center;
     max-width: 100%;
     margin: 0 auto;
-    padding: 20px;
+    padding: 1.25rem;
     box-sizing: border-box;
-}
-
-.contato {
-    font-size: 30px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    margin-top: 25px;
-    margin-bottom: 15px;
-    text-align: center;
 }
 
 .img-contato {
@@ -145,28 +145,28 @@ input[type="file"] {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 500px; /* Ajuste conforme necessário */
+    max-width: 31.25rem; /* Ajuste conforme necessário */
+}
+
+form {
+    width: 25rem;
 }
 
 .input-field {
     width: 100%;
-    height: 45px;
-    padding: 10px 20px;
-    margin: 5px 0;
+    height: 2.813rem;
+    padding: 0.625rem 1.25rem;
+    margin: 0.313rem 0;
     border: 1px solid #ccc;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     box-sizing: border-box; 
-    font-size: 16px; /* Ajusta o tamanho da fonte se necessário */
-}
-
-form {
-    width: 400px;
+    font-size: 1rem; 
 }
 
 .infos-input {
-    height: 200px;
+    height: 12.5rem;
     resize: vertical;
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .editar {
@@ -176,18 +176,18 @@ form {
 }
 
 .save-button {
-    height: 45px;
-    padding: 10px 30px;
-    margin: 20px 0;
+    height: 2.813rem;
+    padding: 0.625rem 1.875rem;
+    margin: 1.25rem 0;
     background-color: #FF735C;
     color: white;
     border: none;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     cursor: pointer;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .save-button:hover {
@@ -201,13 +201,13 @@ footer {
 	width: 100%;
 	color:#000;
 	text-align: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 	font-family: "Poppins", sans-serif;
 	font-weight: 400;
 	font-style: normal;
     box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 footer a {
     color: #FF735C;
